# phitter

./: .buildinfo  .gitignore  LICENSE  LICENSE.md  README copy.md  README copy.rst  README.md  __init__.py  blackbody_params.py  features.html  genindex.html  index.html  installation.html  isoc_interp.py  isoc_interp_2mass.py  isoc_interp_br.py  lc_calc.py  lc_calc_2mass.py  lc_calc_wRV.py  mcmc_fit.py  mcmc_fit_bb.py  mcmc_fit_bb_wRV.py  mesh_animate.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  structure.html  tutorials.html
.nova/: Configuration.json
_modules/: binary_params.html  blackbody_params.html  index.html  isoc_interp_params.html  likelihood.html  model_obs_calc.html  phot_adj_calc.html  prior.html  rv_adj_calc.html  star_params.html
_modules/phitter/: filters.html  (+2 more)
_sources/: installation.md.txt  structure.md.txt  tutorials.md.txt
apidocs/: index.html
autoapi/: index.html
docs/: docs_env.yaml
mcmc_helper_scripts/: binary_fit_mcmc.py  binary_fit_mcmc_mpi.py  chains_numerator.py
notebooks/: add_phot_effects.html  add_rv_effects.html  create_mock_data.html  fit_with_emcee.html  fit_with_ultranest.html  simulate_model_binary.html  simulate_model_binary_wMIST_star_params.html
phitter/: blackbody_params.py  filters.py  isoc_interp.py  isoc_interp_wHST.py  isoc_interp_wLp.py  lc_calc.py  lc_calc_br_rv.py  lc_calc_wRV.py  legacy_lc_calc.py  mcmc_fit.py  mcmc_fit_bb.py  mcmc_fit_bb_star_wRV.py  mcmc_fit_bb_wRV.py  mcmc_fit_wRV.py  observables.py  observations.py
tests/: isoc_interp_tester.py  lc_tester.py
(+158 files in other folders)
